Add endpoint to return google auth url
